# api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  api.Dockerfile  api.postman_collection.json  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  ci.yml
api/: __init__.py  __main__.py  api.py  config.py
api/common/: __init__.py
api/common/controllers/: __init__.py  default_controller.py  feedback_controller.py
api/common/dto/: __init__.py  feedback.py  user.py
api/common/orm/: __init__.py  base.py  feedbacks.py  users.py
api/common/repositories/: __init__.py  default_repository.py  feedback_repository.py  user_repository.py
api/common/services/: auth_service.py  default_service.py  feedback_service.py  user_service.py
api/sample/: __init__.py  constants.py
api/sample/controllers/: __init__.py  product_controller.py
api/sample/dto/: __init__.py  access_right.py  product.py
api/sample/orm/: __init__.py  access_rights.py  products.py
api/sample/repositories/: __init__.py  access_right_repository.py  product_repository.py
api/sample/services/: __init__.py  product_service.py
api/utils/: config.py  constants.py  database.py  gcs.py  log.py
configs/: authorization.yaml  common.yaml  config.yaml  sample.yaml  test.yaml
db_migrations/: README.md  __init__.py  env.py  script.py.mako
db_migrations/utils/: __init__.py  schemas.py
db_migrations/versions/: 5cfbdb83010d_.py  5cfbdb83010d_common.py  7c3b60d312ff_add_access_control.py  __init__.py  ebfe4763622d_.py  f3cdc3ead1fa_.py
scripts/: __init__.py  add_test_user.py  deploy.sh  generate_password.py  get_openapi.py  init.sh  start.sh  test.sh
terraform/: main.tf  variables.tf
tests/: conftest.py  docker-compose.yaml
tests/api/common/: __init__.py
tests/api/common/controllers/: default_controller_test.py  feedback_controller_test.py
tests/api/sample/: __init__.py
tests/api/sample/controllers/: __init__.py  product_controller_test.py
tests/api/utils/: config_test.py
tests/end_to_end/: docker-compose.yaml
tests/end_to_end/client/: client_script.sh
tests/migrations/: docker-compose.yaml
ui/: __init__.py  index.html  not_found.html
