[tool.poetry]
name = "api"
version = "0.1.0"
description = "API repository."
authors = [ "Niels Degrande <niels@degran.de>" ]
license = "Other/Proprietary"
readme = "README.md"
packages = []

[tool.poetry.scripts]
api = "api.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "23.2.1"
alembic = "^1.15.1"
async-lru = "^2.0.5"
asyncpg = "^0.30.0"
bcrypt = "^4.3.0"
coloredlogs = "~15.0"
fastapi = "^0.115.12"
gcloud-aio-storage = "^9.4.0"
google-cloud-storage = "^3.1.0"
httptools = "^0.6.1"
jinja2 = "^3.1.6"  # Pin Jinja2 given pip-audit issue.
python-box = "~7.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
sqlalchemy = { extras = [ "asyncio" ], version = "^2.0.39" }
uvicorn = { extras = [ "standard" ], version = "^0.34.0" }
uvloop = "^0.21.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pip-audit = "^2.8.0"
pre-commit = "~4.2"
pyright = "^1.1.396"
pytest = "~8.3"
pytest-asyncio = "^0.25.3"
pytest-cov = "~6.0"
pytest-mock = "~3.14"
pytest-timeout = "~2.3"
pytest-xdist = "~3.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
add-trailing-comma = "*"
black = "*"
codespell = "*"
ipython = "*"
isort = "*"
pre-commit = "*"
ruff = "*"
sqlalchemy2-stubs = "*"
sqlfluff = "*"
types-PyYAML = "*"
vulture = "*"

[tool.pytest.ini_options]
timeout = "60"
addopts = [
    "--cov-report=html:test-reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov=api",
    "--junitxml=test-reports/junit/junit.xml",
    "--no-cov-on-fail",
    "--strict-markers",
    "--verbose",
    "-r sxX",
]
cache_dir = ".cache"
filterwarnings = [ "error" ]
testpaths = "tests"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Do not complain if tests do not hit defensive assertion code.
    "raise AssertionError",
    "raise NotImplementedError",

    # Do not complain if non-runnable code is not run.
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D203", # one-blank-line-before-class (incompatible with D211).
    "D213", # multi-line-summary-second-line (incompatible with D212).
    # Do not complain about TODOs with missing author or link.
    "FIX002",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
# Do not complain if __init__.py files have unused imports.
"__init__.py" = [ "F401" ]
# Do not complain if tests use the assert keyword.
"tests/*" = [ "S101" ]

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
