[project]
name = "api"
version = "0.1.0"
description = "API repository."
authors = [ { name = "Niels Degrande", email = "niels@degran.de" } ]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.17.2",
    "async-lru==2.0.5",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "coloredlogs==15.0.1",
    "fastapi==0.124.4",
    "gcloud-aio-storage==9.6.1",
    "google-cloud-storage==3.7.0",
    "pydantic==2.12.5",
    "python-box==7.3.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "sqlalchemy[asyncio]==2.0.45",
    "uvicorn[standard]==0.38.0",
]

[project.scripts]
api = "api.__main__:main"

[dependency-groups]
dev = [
    "add-trailing-comma",
    "black",
    "codespell",
    "ipython",
    "isort",
    "pre-commit",
    "ruff",
    "sqlalchemy2-stubs",
    "sqlfluff",
    "types-PyYAML",
    "vulture",
]
test = [
    "httpx==0.28.1",
    "pip-audit==2.10.0",
    "pre-commit==4.5.1",
    "pyright==1.1.407",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
timeout = "60"
addopts = [
    "--cov-report=html:test-reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov=api",
    "--junitxml=test-reports/junit/junit.xml",
    "--no-cov-on-fail",
    "--strict-markers",
    "--verbose",
    "-r sxX",
]
cache_dir = ".cache"
filterwarnings = [ "error" ]
testpaths = "tests"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Do not complain if tests do not hit defensive assertion code.
    "raise AssertionError",
    "raise NotImplementedError",

    # Do not complain if non-runnable code is not run.
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "COM812", # missing-trailing-comma not needed due to use of formatter.
    "D203", # one-blank-line-before-class (incompatible with D211).
    "D213", # multi-line-summary-second-line (incompatible with D212).
    # Do not complain about TODOs with missing author or link.
    "FIX002",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
# Do not complain if __init__.py files have unused imports.
"__init__.py" = [ "F401" ]
# Do not complain if tests use the assert keyword.
"tests/*" = [ "S101" ]

[tool.uv]
default-groups = []

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"
